# src/web/routers/player_router.js
@@ -1,15 +1,16 @@
 "use strict";
 
 const controllers = require("../controllers/player_controllers");
+const { auth } = require("../controllers/common_controllers");
 
 const express = require("express");
 const router = express.Router();
 
 router.get("/:playerId", controllers.getPlayer);
-router.patch("/:playerId", controllers.modifyPlayer);
-router.delete("/:playerId", controllers.deletePlayer);
+router.patch("/:playerId", auth, controllers.modifyPlayer);
+router.delete("/:playerId", auth, controllers.deletePlayer);
 
 router.get("/", controllers.getAllPlayers);
-router.post("/", controllers.postPlayer);
+router.post("/", auth, controllers.postPlayer);
 
 module.exports = router;
