# swagger.yaml
@@ -66,32 +66,8 @@ paths:
             items:
               $ref: "#/definitions/Player"
 
-  /player/{playerId}:
-    get:
-      tags:
-      - "player"
-      summary: "Find player by ID"
-      description: "Returns a single player"
-      operationId: "getPlayerById"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "playerId"
-        in: "path"
-        description: "ID of player to return"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Player"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Player not found"
 
+  /player/{playerId}:
     patch:
       tags:
       - "player"
@@ -123,6 +99,30 @@ paths:
           description: "No enough rights"
         "405":
           description: "Invalid input"
+    get:
+      tags:
+      - "player"
+      summary: "Find player by ID"
+      description: "Returns a single player"
+      operationId: "getPlayerById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "playerId"
+        in: "path"
+        description: "ID of player to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Player"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Player not found"
 
     delete:
       tags:
@@ -368,7 +368,7 @@ paths:
           description: "Invalid input"
 
   /user/login:
-    get:
+    post:
       tags:
       - "user"
       summary: "Logs user into the system"
@@ -377,16 +377,12 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - name: "username"
-        in: "query"
-        description: "The user name for login"
+      - name: "loginInfo"
+        in: "body"
+        description: "The user info for login"
         required: true
-        type: "string"
-      - name: "password"
-        in: "query"
-        description: "The password for login in clear text"
-        required: true
-        type: "string"
+        schema:
+          $ref: "#/definitions/UserLoginInfo"
       responses:
         "200":
           description: "successful operation"
@@ -458,6 +454,14 @@ paths:
 
 
 definitions:
+  UserLoginInfo:
+    type: "object"
+    properties:
+      login:
+        type: "string"
+      password:
+        type: "string"
+
   User:
     type: "object"
     properties:
@@ -467,8 +471,8 @@ definitions:
       login:
         type: "string"
       plevel:
-        type: "boolean"
-        default: false
+        type: "integer"
+        format: "int64"
 
   UserWithPass:
     type: "object"
@@ -479,8 +483,8 @@ definitions:
       login:
         type: "string"
       plevel:
-        type: "boolean"
-        default: false
+        type: "integer"
+        format: "int64"
       password:
         type: "string"
 
